--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 
   "dependencies": {
     "node-watch": "0.3.4",
-    "ezlog": "*",
-    "opensoars_cls": "*"
+    "ezlog": "0.0.10",
+    "opensoars_cls": "0.0.5"
   },
 
   "devDependencies": {
@@ -21,5 +21,7 @@
     "url": "https://github.com/opensoars/wnw"
   },
 
-  "readmeFilename": "readme.md"
+  "readmeFilename": "README.md"
 }
+
+ezlog f_ opensoars_cls prodl
