--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Watch Node-Webkit projects for automatic restarts.",
 
   "scripts": {
+    "test": ""
   },
 
   "dependencies": {
@@ -23,5 +24,3 @@
 
   "readmeFilename": "README.md"
 }
-
-ezlog f_ opensoars_cls prodl
